# reldatasync

./: .flake8  .gitignore  .pre-commit-config.yaml  .yamllint-config.yml  Dockerfile  LICENSE  README.md  datastore.py  docker-compose.yaml  requirements.dev.txt  requirements.in  requirements.txt  setup.py  sync.py  sync_tests.py  test_client.py  test_server.py
.github/: dependabot.yml
.github/workflows/: tests.yml
django/: .gitignore  MANIFEST.in  README.md  manage.py  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py
django/reldatasync_app/: api.py  apps.py  models.py  rest_api.py  urls.py
django/reldatasync_app/management/commands/: sync_datastores.py
django/reldatasync_app/migrations/: 0001_initial.py
django/reldatasync_project/: asgi.py  settings.py  urls.py  wsgi.py
django/rsdb/: asgi.py  settings.py  urls.py  wsgi.py
django/rsdb_app/: apps.py  models.py
django/rsdb_app/migrations/: 0001_initial.py
django/test_reldatasync_app/: apps.py  models.py  test_rest_api.py  tests.py
django/test_reldatasync_app/migrations/: 0001_initial.py
django/test_reldatasync_app/tests/: test_api.py  test_models.py  tests.py
django/test_rsdb_app/: apps.py  models.py  tests.py
django/test_rsdb_app/migrations/: 0001_initial.py
java/: README.md  pom.xml
java/android/: README.md  settings.gradle
java/android/app/: build.gradle
java/android/app/src/androidTest/java/org/maventy/reldatasync/: ExampleInstrumentedTest.java
java/android/app/src/main/: AndroidManifest.xml
java/android/app/src/main/res/values/: strings.xml  themes.xml
java/android/app/src/main/res/values-night/: themes.xml
java/android/app/src/test/java/org/maventy/reldatasync/: ExampleUnitTest.java
java/android/gradle/wrapper/: gradle-wrapper.properties
java/android/reldatasync/: build.gradle
java/android/reldatasync-android/: build.gradle
java/android/reldatasync-android/src/androidTest/java/org/maventy/reldatasync/android/: ExampleInstrumentedTest.java
java/android/reldatasync-android/src/main/: AndroidManifest.xml
java/android/reldatasync-android/src/main/java/org/maventy/reldatasync/android/: JdbcDatastore.java
java/android/reldatasync-android/src/test/java/org/maventy/reldatasync/android/: AutoDeletingTempFile.java  DatastoreTester.java  ExampleUnitTest.java  TestJdbcDataStore.java  TestJdbcDatastore.java
java/android/reldatasync/src/main/java/org/maventy/reldatasync/: BaseDatastore.java  Datastore.java  Document.java  JdbcDatastore.java  MyClass.java  SqlUtils.java  StringUtils.java
java/android/reldatasync/src/test/java/org/maventy/reldatasync/: TestDocument.java
java/src/main/java/org/maventy/reldatasync/: Document.java  Main.java  NetworkUtil.java  RestClientSourceDatastore.java
java/src/test/java/org/maventy/reldatasync/: TestClient.java
python/: .gitignore  README.md  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py
python/reldatasync/: datastore.py  document.py  json.py  rds_client.py  replicator.py  schema.py  util.py  vectorclock.py
python/tests/: __init__.py  rds_client.py  rds_server.py  rds_test_client.py  rds_test_server.py  test_datastore.py  test_document.py  test_json.py  test_server_and_client.py  test_sync.py  test_util.py  test_vectorclock.py
reldatasync/: Dockerfile  datastore.py  requirements.txt
tests/: sync_tests.py  test_client.py  test_server.py  test_server_and_client.py  test_sync.py
