[metadata]
name = django-reldatasync
version = 0.0.3
description = Synchronize relational data between two datastores
long_description = file: README.md
url='https://github.com/dfrankow/reldatasync'
author = Dan Frankowski
author_email = dfrankow+rds@example.com
license = MIT-license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.7
install_requires =
    Django >= 3.2
